fixed scrollbars

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
+:root{
+    scrollbar-color: #8d8d8d transparent;
+    scrollbar-width: thin;
+  }
+
+* {
+    scrollbar-color: #111111 transparent;
+    scrollbar-width: thin;
+}
+
 ::-webkit-scrollbar {
     width: 4px;
     height: 0px;
@@ -12,6 +22,6 @@
 }
 
 ::-webkit-scrollbar-thumb {
-    background-color: #111111;
+    background-color: #5a5a5a;
     border-radius: 16px;
 }
